# gsp

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  flash.sh  guitar-signal-processor.ioc
Core/Src/: main.c
app/: CMakeLists.txt
app/blinking_leds/: CMakeLists.txt
app/blinking_leds/inc/: arr.h  i2s.h  sample_wav.h  stm32f4xx_hal_conf.h
app/blinking_leds/src/: i2s.c  main.cpp
app/led/: led.hpp
drivers/led/: led.cpp  led.hpp
lib/: CMakeLists.txt
lib/drivers/led/: CMakeLists.txt
toolchain/: arm-none-eabi-g++.cmake  arm-none-eabi-gcc.cmake
